Ended sugestion side and made app responsability

--- a/LoginPage/loginPage.html
+++ b/LoginPage/loginPage.html
@@ -52,7 +52,23 @@
 
 <!--    Sugestion Side    -->
     <div class="sugestion-side">
-1
+        <div class="sugestion-side-container">
+            <img src="images/sugestion-carousel.png" alt="">
+            <div class="sugestion-side-container">
+                <h1 class="sugestion-label">
+                Leave reviews for all meals
+                </h1>
+                <div class="sugestions">
+                    Lorem ipsum dolor sit amet, magna scaevola his ei. Cum te paulo probatus molestiae, eirmod assentior eum ne, et omnis antiopam mel.
+                </div>
+                <div class="carousel-circels-container">
+                    <div class="carousel-circels"></div>
+                    <div class="carousel-circels" id="full-circle"></div>
+                    <div class="carousel-circels"></div>
+                    <div class="carousel-circels"></div>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
