--- a/LoginPage/loginPage.html
+++ b/LoginPage/loginPage.html
@@ -26,13 +26,15 @@
                         Sign in with your data that you entered during your registration.
                     </div>
                     <!--  Input Containers  -->
-                    <div class="input-containers">
-                        <label for="email">Email</label>
-                        <input id="email" placeholder="name@example.com" type="text"/>
-                    </div>
-                    <div class="input-containers">
-                        <label for="password">Password</label>
-                        <input placeholder="min. 8 characters" id="password" type="password"/>
+                    <div class="inputs-container">
+                        <div class="input-containers">
+                            <label for="email">Email</label>
+                            <input id="email" placeholder="name@example.com" type="text"/>
+                        </div>
+                        <div class="input-containers">
+                            <label for="password">Password</label>
+                            <input placeholder="min. 8 characters" id="password" type="password"/>
+                        </div>
                     </div>
                     <!--  Keep me logged in button  -->
                     <div class="logged-container">
@@ -56,7 +58,7 @@
             <img src="images/sugestion-carousel.png" alt="">
             <div class="sugestion-side-container">
                 <h1 class="sugestion-label">
-                Leave reviews for all meals
+                    Leave reviews for all meals
                 </h1>
                 <div class="sugestions">
                     Lorem ipsum dolor sit amet, magna scaevola his ei. Cum te paulo probatus molestiae, eirmod assentior eum ne, et omnis antiopam mel.
