Started making the home page. Completed navbar and started to make the main section

--- a/HomePage/homePage.html
+++ b/HomePage/homePage.html
@@ -3,8 +3,65 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="homePageStyle.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
 </head>
 <body>
+    <header>
+        <nav>
+            <div class="navbar-container">
+                <!--  Left side of the navbar          -->
+                <div class="left-side-navbar">
+                    <!--  Icon  -->
+                    <div class="icon-container">
+                        <h2 class="icon ">Food</h2>
+                        <h2 class="icon icon-blue">delivery</h2>
+                    </div>
+                    <!--  Search input  -->
+                    <div class="search-input-container">
+                        <input placeholder="Search" type="text">
+                        <a href="#">
+                            <img src="images/searchIcon.png" alt="">
+                        </a>
+                    </div>
+                </div>
+                <!--  Right side of the navbar  -->
+                <div class="right-side-navbar">
+                    <a href="#">Restaurants</a>
+                    <a href="#">Deals</a>
+                    <div class="divider"></div>
+                    <a href="#">My orders</a>
+                    <a href="#">
+                        <div class="cart-button">
+                            <img src="images/shopingCartIcon.png" alt="">
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="profile-button">
+                            <img src="images/profilePicture.png" alt="">
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <main>
+        <section>
+            <!--  Discount container   -->
+            <div class="discount-container">
+                <img class="left-image-discount" src="images/foodImage1.png" alt="">
+                <img class="right-image-discount" src="images/foodImage2.png" alt="">
+            </div>
+            <!--  Food positions container   -->
+            <div>
 
+            </div>
+        </section>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
