--- a/LoginPage/loginPage.html
+++ b/LoginPage/loginPage.html
@@ -55,14 +55,17 @@
 <!--    Sugestion Side    -->
     <div class="sugestion-side">
         <div class="sugestion-side-container">
+            <!--  Carousel images  -->
             <img src="images/sugestion-carousel.png" alt="">
             <div class="sugestion-side-container">
+                <!--  Carousel images description -->
                 <h1 class="sugestion-label">
                     Leave reviews for all meals
                 </h1>
                 <div class="sugestions">
                     Lorem ipsum dolor sit amet, magna scaevola his ei. Cum te paulo probatus molestiae, eirmod assentior eum ne, et omnis antiopam mel.
                 </div>
+                <!--  Carousel dots  -->
                 <div class="carousel-circels-container">
                     <div class="carousel-circels"></div>
                     <div class="carousel-circels" id="full-circle"></div>
