--- a/LoginPage/loginPage.html
+++ b/LoginPage/loginPage.html
@@ -26,23 +26,24 @@
                         Sign in with your data that you entered during your registration.
                     </div>
                     <!--  Input Containers  -->
-                    <div class="inputs-container">
-                        <div class="input-containers">
+                    <form class="personal-data-input-containers">
+                        <div class="input-container">
+                            <form action=""></form>
                             <label for="email">Email</label>
                             <input id="email" placeholder="name@example.com" type="text"/>
                         </div>
-                        <div class="input-containers">
+                        <div class="input-container">
                             <label for="password">Password</label>
                             <input placeholder="min. 8 characters" id="password" type="password"/>
                         </div>
-                    </div>
-                    <!--  Keep me logged in button  -->
-                    <div class="logged-container">
-                        <input id="remember-me" type="checkbox"/><label for="remember-me">Keep me logged in</label>
-                    </div>
-                    <!--  Login and forgot password button  -->
-                    <button class="login-button">Login</button>
-                    <a id="forgot-link" href="#">Forgot password</a>
+                        <!--  Keep me logged in button  -->
+                        <div class="logged-container">
+                            <input id="remember-me" type="checkbox"/><label for="remember-me">Keep me logged in</label>
+                        </div>
+                        <!--  Login and forgot password button  -->
+                        <button type="submit" class="login-button">Login</button>
+                        <a id="forgot-link" href="#">Forgot password</a>
+                    </form>
                 </div>
             </div>
             <!-- Sign Up -->
@@ -52,25 +53,25 @@
         </div>
     </div>
 
-<!--    Sugestion Side    -->
-    <div class="sugestion-side">
-        <div class="sugestion-side-container">
+<!--    Suggestion Side    -->
+    <div class="suggestion-side">
+        <div class="suggestion-side-container">
             <!--  Carousel images  -->
-            <img src="images/sugestion-carousel.png" alt="">
-            <div class="sugestion-side-container">
+            <img src="images/suggestion-carousel.png" alt="">
+            <div class="suggestion-side-container">
                 <!--  Carousel images description -->
-                <h1 class="sugestion-label">
+                <h1 class="suggestion-label">
                     Leave reviews for all meals
                 </h1>
-                <div class="sugestions">
+                <div class="suggestions">
                     Lorem ipsum dolor sit amet, magna scaevola his ei. Cum te paulo probatus molestiae, eirmod assentior eum ne, et omnis antiopam mel.
                 </div>
                 <!--  Carousel dots  -->
-                <div class="carousel-circels-container">
-                    <div class="carousel-circels"></div>
-                    <div class="carousel-circels" id="full-circle"></div>
-                    <div class="carousel-circels"></div>
-                    <div class="carousel-circels"></div>
+                <div class="carousel-circles-container">
+                    <div class="carousel-circle"></div>
+                    <div class="carousel-circle" id="full-circle"></div>
+                    <div class="carousel-circle"></div>
+                    <div class="carousel-circle"></div>
                 </div>
             </div>
         </div>
