Made icon clickable, redirecting on home page

--- a/LoginPage/loginPage.html
+++ b/LoginPage/loginPage.html
@@ -14,8 +14,10 @@
         <div class="login-side-container">
             <!-- Icon -->
             <div class="icon-container">
-                <h2 class="icon ">Food</h2>
-                <h2 class="icon icon-blue">delivery</h2>
+                <a href="../HomePage/homePage.html">
+                    <h2 class="icon ">Food</h2>
+                    <h2 class="icon icon-blue">delivery</h2>
+                </a>
             </div>
             <div class="login-container">
                 <!-- Login -->
