--- a/HomePage/homePage.html
+++ b/HomePage/homePage.html
@@ -12,14 +12,14 @@
     <header>
         <nav>
             <div class="navbar-container">
-                <!--  Left side of the navbar          -->
+
                 <div class="left-side-navbar">
-                    <!--  Icon  -->
+
                     <div class="icon-container">
                         <h2 class="icon ">Food</h2>
                         <h2 class="icon icon-blue">delivery</h2>
                     </div>
-                    <!--  Search input  -->
+
                     <div class="search-input-container">
                         <input placeholder="Search" type="text">
                         <a href="#">
@@ -27,7 +27,7 @@
                         </a>
                     </div>
                 </div>
-                <!--  Right side of the navbar  -->
+
                 <div class="right-side-navbar">
                     <a href="#">Restaurants</a>
                     <a href="#">Deals</a>
@@ -35,7 +35,7 @@
                     <a href="#">My orders</a>
                     <a href="#">
                         <div class="cart-button">
-                            <img src="images/shopingCartIcon.png" alt="">
+                            <img src="images/shoppingCartIcon.png" alt="">
                         </div>
                     </a>
                     <a href="#">
@@ -49,14 +49,129 @@
     </header>
     <main>
         <section>
-            <!--  Discount container   -->
             <div class="discount-container">
                 <img class="left-image-discount" src="images/foodImage1.png" alt="">
                 <img class="right-image-discount" src="images/foodImage2.png" alt="">
             </div>
-            <!--  Food positions container   -->
-            <div>
 
+            <div class="food-category-container">
+                <div class="food-category">
+                    <a href="#">
+                        <img src="images/foodCategories/pizza.png" alt="">
+                        <span>Pizza</span>
+                    </a>
+                </div>
+                <div class="food-category">
+                    <a href="#">
+                        <img src="images/foodCategories/burger.png" alt="">
+                        <span>Burger</span>
+                    </a>
+                </div>
+                <div class="food-category">
+                    <a href="#">
+                        <img src="images/foodCategories/bbq.png" alt="">
+                        <span>BBQ</span>
+                    </a>
+                </div>
+                <div class="food-category">
+                    <a href="#">
+                        <img src="images/foodCategories/sushi.png" alt="">
+                        <span>Sushi</span>
+                    </a>
+                </div>
+                <div class="food-category">
+                    <a href="#">
+                        <img src="images/foodCategories/vegan.png" alt="">
+                        <span>Vegan</span>
+                    </a>
+                </div>
+                <div class="food-category">
+                    <a href="#">
+                        <img src="images/foodCategories/desserts.png" alt="">
+                        <span>Desserts</span>
+                    </a>
+                </div>
+            </div>
+
+            <h1 class="menu-options-label">
+                Nearby restaurants
+            </h1>
+
+            <div class="menu-options-container">
+                <div class="menu-options">
+                    <img src="images/foodOptions/royalSushi.png" alt="">
+                    <div class="menu-option-information">
+                        <h2>Royal Sushi House</h2>
+                        <span>&#x1F551; 30-40 min &nbsp; • &nbsp; $32 min sum</span>
+                        <div class="menu-option-category">
+                            <img src="images/foodTypes/sushi.png" alt="">
+                            <span>Sushi</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="menu-options">
+                    <img src="images/foodOptions/burgerAndPizzas.png" alt="">
+                    <div class="menu-option-information">
+                        <h2>Royal Sushi House</h2>
+                        <span>&#x1F551; 30-40 min &nbsp; • &nbsp; $32 min sum</span>
+                        <div class="menu-options-category-container">
+                            <div class="menu-option-category">
+                                <img src="images/foodTypes/sushi.png" alt="">
+                                <span>Pizza</span>
+                            </div>
+                            <div class="menu-option-category">
+                                <img src="images/foodTypes/sushi.png" alt="">
+                                <span>Burger</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="menu-options">
+                    <img src="images/foodOptions/ninjaSushi.png" alt="">
+                    <div class="menu-option-information">
+                        <h2>Royal Sushi House</h2>
+                        <span>&#x1F551; 30-40 min &nbsp; • &nbsp; $32 min sum</span>
+                        <div class="menu-option-category">
+                            <img src="images/foodTypes/sushi.png" alt="">
+                            <span>Sushi</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="menu-options-container">
+                <div class="menu-options">
+                    <img src="images/foodOptions/sushiMaster.png" alt="">
+                    <div class="menu-option-information">
+                        <h2>Royal Sushi House</h2>
+                        <span>&#x1F551; 30-40 min &nbsp; • &nbsp; $32 min sum</span>
+                        <div class="menu-option-category">
+                            <img src="images/foodTypes/sushi.png" alt="">
+                            <span>Sushi</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="menu-options">
+                    <img src="images/foodOptions/japaneseSushi.png" alt="">
+                    <div class="menu-option-information">
+                        <h2>Royal Sushi House</h2>
+                        <span>&#x1F551; 30-40 min &nbsp; • &nbsp; $32 min sum</span>
+                        <div class="menu-option-category">
+                            <img src="images/foodTypes/sushi.png" alt="">
+                            <span>Sushi</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="menu-options">
+                    <img src="images/foodOptions/kobe.png" alt="">
+                    <div class="menu-option-information">
+                        <h2>Royal Sushi House</h2>
+                        <span>&#x1F551; 30-40 min &nbsp; • &nbsp; $32 min sum</span>
+                        <div class="menu-option-category">
+                            <img src="images/foodTypes/sushi.png" alt="">
+                            <span>Sushi</span>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
