--- a/LoginPage/loginPage.html
+++ b/LoginPage/loginPage.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Food delivery</title>
     <link rel="stylesheet" href="loginPageStyle.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,26 +19,26 @@
                 </a>
             </div>
             <div class="login-container">
-
                 <div>
-
                     <h1 class="login-label">Login</h1>
                     <div class="login-instruction">
                         Sign in with your data that you entered during your registration.
                     </div>
-
-                    <form class="personal-data-input-containers">
+                    <form class="login-form">
                         <div class="input-container">
-                            <form action=""></form>
-                            <label for="email">Email</label>
-                            <input id="email" placeholder="name@example.com" type="text"/>
+                            <form action="">
+                                <label for="email">Email</label>
+                                <input id="email" placeholder="name@example.com" type="text"/>
+                            </form>
                         </div>
                         <div class="input-container">
-                            <label for="password">Password</label>
-                            <input placeholder="min. 8 characters" id="password" type="password"/>
+                            <form action="">
+                                <label for="password">Password</label>
+                                <input placeholder="min. 8 characters" id="password" type="password"/>
+                            </form>
                         </div>
 
-                        <div class="logged-container">
+                        <div class="remember-me">
                             <input id="remember-me" type="checkbox"/><label for="remember-me">Keep me logged in</label>
                         </div>
 
