Refactor folder structure

--- a/products.html
+++ b/products.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Food delivery</title>
-    <link rel="stylesheet" href="homePageStyle.css">
+    <link rel="stylesheet" href="css/products.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
@@ -16,8 +16,10 @@
                 <div class="left-side-navbar">
 
                     <div class="icon-container">
-                        <h2 class="icon ">Food</h2>
-                        <h2 class="icon icon-blue">delivery</h2>
+                        <a href="index.html">
+                            <h2 class="icon ">Food</h2>
+                            <h2 class="icon icon-blue">delivery</h2>
+                        </a>
                     </div>
 
                     <div class="search-input-container">
@@ -98,7 +100,7 @@
             </h1>
 
             <div class="menu-options-container">
-                <div class="menu-options">
+                <div class="menu-option">
                     <img src="images/foodOptions/royalSushi.png" alt="">
                     <div class="menu-option-information">
                         <h2>Royal Sushi House</h2>
@@ -109,7 +111,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="menu-options">
+                <div class="menu-option">
                     <img src="images/foodOptions/burgerAndPizzas.png" alt="">
                     <div class="menu-option-information">
                         <h2>Royal Sushi House</h2>
@@ -126,7 +128,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="menu-options">
+                <div class="menu-option">
                     <img src="images/foodOptions/ninjaSushi.png" alt="">
                     <div class="menu-option-information">
                         <h2>Royal Sushi House</h2>
@@ -137,9 +139,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="menu-options-container">
-                <div class="menu-options">
+                <div class="menu-option">
                     <img src="images/foodOptions/sushiMaster.png" alt="">
                     <div class="menu-option-information">
                         <h2>Royal Sushi House</h2>
@@ -150,7 +150,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="menu-options">
+                <div class="menu-option">
                     <img src="images/foodOptions/japaneseSushi.png" alt="">
                     <div class="menu-option-information">
                         <h2>Royal Sushi House</h2>
@@ -161,7 +161,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="menu-options">
+                <div class="menu-option">
                     <img src="images/foodOptions/kobe.png" alt="">
                     <div class="menu-option-information">
                         <h2>Royal Sushi House</h2>
