Product page responsibility

--- a/products.html
+++ b/products.html
@@ -31,10 +31,10 @@
                 </div>
 
                 <div class="right-side-navbar">
-                    <a href="#">Restaurants</a>
-                    <a href="#">Deals</a>
-                    <div class="divider"></div>
-                    <a href="#">My orders</a>
+                    <a id="restaurants" href="#">Restaurants</a>
+                    <a id="deals" href="#">Deals</a>
+                    <div class="divider" ></div>
+                    <a id="my-order" href="#">My orders</a>
                     <a href="#">
                         <div class="cart-button">
                             <img src="images/shoppingCartIcon.png" alt="">
@@ -43,6 +43,14 @@
                     <a href="#">
                         <div class="profile-button">
                             <img src="images/profilePicture.png" alt="">
+                        </div>
+                    </a>
+                    <div id="divider-showed" class="divider"></div>
+                    <a href="#">
+                        <div class="menu-button">
+                            <div class="button-line-icon"></div>
+                            <div class="button-line-icon"></div>
+                            <div class="button-line-icon"></div>
                         </div>
                     </a>
                 </div>
