--- a/products.html
+++ b/products.html
@@ -40,7 +40,7 @@
                             <img src="images/shoppingCartIcon.png" alt="">
                         </div>
                     </a>
-                    <a href="#">
+                    <a href="profile.html">
                         <div class="profile-button">
                             <img src="images/profilePicture.png" alt="">
                         </div>
@@ -183,8 +183,5 @@
             </div>
         </section>
     </main>
-    <footer>
-
-    </footer>
 </body>
 </html>
