--- a/profile.html
+++ b/profile.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Food delivery</title>
     <link rel="stylesheet" href="css/profile.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -61,42 +61,50 @@
         <section>
             <div class="profile-settings-container">
                 <h1>Settings</h1>
-                <div class="profile-setting">
-                    <div class="profile-setting-image">
-                        <img src="" alt="">
+                <a  href="#">
+                    <div class="profile-setting">
+                        <div class="profile-setting-image">
+                            <img src="" alt="">
+                        </div>
+                        <div>
+                            <h4>Account</h4>
+                            <span>Personal information</span>
+                        </div>
                     </div>
-                    <div>
-                        <h4>Account</h4>
-                        <span>Personal information</span>
+                </a>
+                <a href="#">
+                    <div class="profile-setting">
+                        <div class="profile-setting-image">
+                            <img src="" alt="">
+                        </div>
+                        <div>
+                            <h4>Address</h4>
+                            <span>Shippings addresses</span>
+                        </div>
                     </div>
-                </div>
-                <div class="profile-setting">
-                    <div class="profile-setting-image">
-                        <img src="" alt="">
+                </a>
+                <a href="#">
+                    <div class="profile-setting">
+                        <div class="profile-setting-image">
+                            <img src="" alt="">
+                        </div>
+                        <div>
+                            <h4>Payment method</h4>
+                            <span>Connected credit cards</span>
+                        </div>
                     </div>
-                    <div>
-                        <h4>Address</h4>
-                        <span>Shippings addresses</span>
+                </a>
+                <a href="#">
+                    <div class="profile-setting">
+                        <div class="profile-setting-image">
+                            <img src="" alt="">
+                        </div>
+                        <div>
+                            <h4>Security</h4>
+                            <span>Password, 2FA</span>
+                        </div>
                     </div>
-                </div>
-                <div class="profile-setting">
-                    <div class="profile-setting-image">
-                        <img src="" alt="">
-                    </div>
-                    <div>
-                        <h4>Payment method</h4>
-                        <span>Connected credit cards</span>
-                    </div>
-                </div>
-                <div class="profile-setting">
-                    <div class="profile-setting-image">
-                        <img src="" alt="">
-                    </div>
-                    <div>
-                        <h4>Security</h4>
-                        <span>Password, 2FA</span>
-                    </div>
-                </div>
+                </a>
             </div>
             <div class="account-information-container">
                 <div class="account-information">
